--- a/videoweb.html/bbc-vids/bbc7.html
+++ b/videoweb.html/bbc-vids/bbc7.html
@@ -319,7 +319,7 @@
 
           <!--        video tages            -->
 
-          <iframe src="https://xhamster18.desi/videos/blacked-megan-rains-first-experience-with-bbc-part-1-5078146" width="760" height="760px" Id="vid" frameBorder="0" style="border: 0;"></iframe><br>Brought to you by <a href="" target="_blank"></a>
+          <iframe src="https://xhamster18.desi/videos/blacked-megan-rains-first-experience-with-bbc-part-1-5078146" width="760" height="760px" Id="vid" frameBorder="0" style="border: 0;"></iframe><br>  <a href="" target="_blank"></a>
 
 
 
