--- a/videoweb.html/bbc-vids/bbc3.html
+++ b/videoweb.html/bbc-vids/bbc3.html
@@ -320,7 +320,7 @@
           <!--        video tages            -->
 
           <iframe src="https://xhamster18.desi/videos/latina-wife-try-bbc-first-time-javxxx-club-13988250"
-           width="760" height="760px" Id="vid" frameBorder="0" style="border: 0;"></iframe><br>Brought to you by <a href="" target="_blank"></a>
+           width="760" height="760px" Id="vid" frameBorder="0" style="border: 0;"></iframe><br>  <a href="" target="_blank"></a>
 
 
 
