--- a/videoweb.html/bbc-vids/bbc5.html
+++ b/videoweb.html/bbc-vids/bbc5.html
@@ -319,7 +319,7 @@
 
           <!--        video tages            -->
 
-          <iframe src="https://xhamster18.desi/videos/workout-time-14038895" width="760" height="760px" Id="vid" frameBorder="0" style="border: 0;"></iframe><br>Brought to you by <a href="" target="_blank"></a>
+          <iframe src="https://xhamster18.desi/videos/workout-time-14038895" width="760" height="760px" Id="vid" frameBorder="0" style="border: 0;"></iframe><br>  <a href="" target="_blank"></a>
 
 
 
