--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <span class="nav_name">Privacy and Policy</span>
             </a>
             <a href="html/terms.html" class="nav_link navtop">
-              <i class="fa-solid fa-memo-circle-info nav_icon"></i>
+              <i class="fa-solid fa-file-contract nav_icon"></i>
               <span class="nav_name">Terms and Conditions</span>
             </a>
            
