--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 <head>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1066708901288975"
     crossorigin="anonymous"></script>
-  
-  <meta name="propeller" content="ed3c1d5a5b87f8bc0a4d796c635232c7">
-  
-  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link type="images/png" rel="icon" href="/images/logo1.jpeg">
@@ -380,30 +376,9 @@
           </div>
         </div>
       </div>
-      
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1066708901288975"
 
-     crossorigin="anonymous"></script>
 
-<!-- 1 -->
 
-<ins class="adsbygoogle"
-
-     style="display:block"
-
-     data-ad-client="ca-pub-1066708901288975"
-
-     data-ad-slot="6989853752"
-
-     data-ad-format="auto"
-
-     data-full-width-responsive="true"></ins>
-
-<script>
-
-     (adsbygoogle = window.adsbygoogle || []).push({});
-
-</script>
       <div class="video_items">
         <a href="/videoweb.html/video8.html">
           <img src="images/THUMBNAILS/08.jpg" alt="">
@@ -417,11 +392,7 @@
           </div>
         </div>
       </div>
-     <!-- 
-      <script async="async" data-cfasync="false"
-        src="//pl17895325.highperformancecpmgate.com/5dc96a5d3e56af820462d94947b5891a/invoke.js"></script>
-      <div id="container-5dc96a5d3e56af820462d94947b5891a"></div>
-      -->
+    
       <div class="video_items">
         <a href="/videoweb.html/video9.html">
           <img src="images/THUMBNAILS/09.jpg" alt="">
@@ -647,9 +618,6 @@
 
 
 
-  <script async="async" data-cfasync="false"
-    src="//pl17895325.highperformancecpmgate.com/5dc96a5d3e56af820462d94947b5891a/invoke.js"></script>
-  <div id="container-5dc96a5d3e56af820462d94947b5891a"></div>
   <br><br>
 
   <div class="footer">
@@ -664,6 +632,8 @@
 
   <script src="/js/search.js" charset="utf-8"></script>
   <script src="/js/main.js" charset="utf-8"></script>
+  <!--infolinks-->
+  <script type="text/javascript"> var infolinks_pid = 3380141; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 
 </html>
