--- a/videoweb.html/video5.html
+++ b/videoweb.html/video5.html
@@ -4,7 +4,7 @@
 
 <head>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1066708901288975"
-  crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
   <meta charset="UTF-8">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,8 +25,6 @@
   </style>
 
   <title>dani daniels gives amazing bj and gets rewarded with doggy|| ~ DHIRAJHUB</title>
-
- <script type='text/javascript' src='//pl17896756.highperformancecpmgate.com/49/e8/98/49e8982680eac34ddb3ff5cd5af16a44.js'></script>
 
 </head>
 
@@ -49,13 +47,13 @@
 
         </div>
       </a>
-    
+
 
     </div>
 
     <div class="none"> </div>
 
-     <div class="wrapper">
+    <div class="wrapper">
       <div class="search-input">
         <a href="" target="_blank" hidden></a>
         <input type="text" placeholder="Search..">
@@ -66,8 +64,8 @@
       </div>
     </div>
 
-    <script src="/js/suggestions.js"></script> 
-     <script src="/js/script.js"></script> 
+    <script src="/js/suggestions.js"></script>
+    <script src="/js/script.js"></script>
 
 
 
@@ -335,8 +333,8 @@
 
           <iframe
             src="https://xhamster18.desi/videos/dani-daniels-gives-amazing-bj-and-gets-rewarded-with-doggy-2259170"
-            width="760" height="760px" Id="vid" frameBorder="0" style="border: 0;"></iframe><br>  <a
-            href="" target="_blank"></a>
+            width="760" height="760px" Id="vid" frameBorder="0" style="border: 0;"></iframe><br> <a href=""
+            target="_blank"></a>
 
           <!--        total viwer            -->
 
@@ -398,7 +396,7 @@
               <span>15M Subscribers</span>
 
               <h5>dani daniels gives amazing bj and gets rewarded with doggy|| ~ DHIRAJHUB </h5>
- 
+
 
               <span>Show More</span>
 
@@ -750,7 +748,9 @@
 
         <div class="right_content">
 
-          <button class="chat"><h2>Suggested Videos</h2></button>
+          <button class="chat">
+            <h2>Suggested Videos</h2>
+          </button>
 
           <!--
           <div class="tags">
@@ -821,13 +821,10 @@
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
-           <div class="video_items vide_sidebar flex">
-            <script async="async" data-cfasync="false" src="//pl17895325.highperformancecpmgate.com/5dc96a5d3e56af820462d94947b5891a/invoke.js"></script>
-            <div id="container-5dc96a5d3e56af820462d94947b5891a"></div><br>
-           </div>
+         
           <div class="more">
             <a href="/">
-          <button class="btn-more">MORE...</button>
+              <button class="btn-more">MORE...</button>
             </a>
           </div>
         </div>
@@ -836,9 +833,8 @@
 
   </main>
 
+  <script src="/js/search.js" charset="utf-8"></script>
   <script src="/js/main.js" charset="utf-8"></script>
-
-<script type='text/javascript' src='//pl17898953.highperformancecpmgate.com/80/1d/b5/801db57f63f19c86e06df337a0a87359.js'></script>
 
 
 </body>
