--- a/videoweb.html/anal-vids/anal9.html
+++ b/videoweb.html/anal-vids/anal9.html
@@ -26,9 +26,7 @@
 
   <title>anal italiana || ~ DHIRAJHUB   </title>
 
-<script type='text/javascript'
-    src='//pl17896756.highperformancecpmgate.com/49/e8/98/49e8982680eac34ddb3ff5cd5af16a44.js'></script>
-
+ 
 </head>
 
 <body>
@@ -807,12 +805,7 @@
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
-         <div class="video_items vide_sidebar flex">
-            <script async="async" data-cfasync="false"
-              src="//pl17895325.highperformancecpmgate.com/5dc96a5d3e56af820462d94947b5891a/invoke.js"></script>
-            <div id="container-5dc96a5d3e56af820462d94947b5891a"></div><br>
-
-          </div>
+         
 
 
           <div class="more">
@@ -826,9 +819,8 @@
 
   </main>
 
+    <script src="/js/search.js" charset="utf-8"></script>
   <script src="/js/main.js" charset="utf-8"></script>
-
-<script type='text/javascript' src='//pl17898953.highperformancecpmgate.com/80/1d/b5/801db57f63f19c86e06df337a0a87359.js'></script>
 
 
 </body>
