--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+  
   <!--    header      -->
   <header class="header">
     <div class="header_container">
@@ -286,6 +287,12 @@
 
 
   <main class="main">
+    <script async type="application/javascript" src="https://a.realsrv.com/ad-provider.js"></script> 
+
+ <ins class="adsbyexoclick" data-zoneid="4850634"></ins> 
+
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+    
     <section class="video_content grid">
       <!--video template-->
       <div class="video_items">
