--- a/index.html
+++ b/index.html
@@ -284,12 +284,12 @@
   </section>
   </div>
   <!--    nav      -->
-<script async type="application/javascript" src="https://a.realsrv.com/ad-provider.js"></script> 
+  <br>
+  <br>
+  <br>
+<div class="banner">
 
- <ins class="adsbyexoclick" data-zoneid="4850634"></ins> 
-
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-
+</div>
     
 
   <main class="main">
