--- a/index.html
+++ b/index.html
@@ -292,7 +292,15 @@
   <br>
   <br>
 <div class="banner">
+<!-- JuicyAds v3.0 -->
 
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+
+<ins id="1003528" data-width="728" data-height="102"></ins>
+
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1003528});</script>
+
+<!--JuicyAds END-->
 </div>
     
 
