--- a/videoweb.html/video1.html
+++ b/videoweb.html/video1.html
@@ -314,14 +314,17 @@
 
           <!--        video tages            -->
 
-          <iframe src="https://nephobox.com/s/1dSyl7JePE9CuyonHUZJnOg"
+      <!--    <iframe src="https://nephobox.com/s/1dSyl7JePE9CuyonHUZJnOg"
             width="760" height="760px" Id="vid" frameBorder="0" style="border: 0;"></iframe>
           <br><a href="" target="_blank"></a>
 
-
-
-
-          <!--        total viwer            -->
+-->
+<video width="320" height="240" controls>
+  
+<source src="https://nephobox.com/s/13kdapTze8qePjQlWn-ZhOw" type="video/mp4">
+  </video>       
+  
+  <!--        total viwer            -->
 
           <div class="view flex2 border_bottom" id="xxx">
 
