--- a/videoweb.html/video1.html
+++ b/videoweb.html/video1.html
@@ -314,14 +314,16 @@
 
           <!--        video tages            -->
 
-      <iframe src="gs://dhirajhub-699.appspot.com/VID-20230113-WA0008.mp4"
+    <!--  <iframe src="gs://dhirajhub-699.appspot.com/VID-20230113-WA0008.mp4"
             width="760" height="760px" Id="vid" frameBorder="0" style="border: 0;"></iframe>
           <br><a href="" target="_blank"></a>
+-->
+<video width="320" height="240" controls>
 
-
+  <source src="gs://dhirajhub-699.appspot.com/VID-20230113-WA0008.mp4" type="video/mp4">
 
   
-
+</video>
 
   
   <!--        total viwer            -->
