--- a/videoweb.html/video1.html
+++ b/videoweb.html/video1.html
@@ -320,7 +320,7 @@
 -->
 <video width="320" height="240" controls>
 
-  <source src="gs://dhirajhub-699.appspot.com/VID-20230113-WA0008.mp4" type="video/mp4">
+  <source src="https://firebasestorage.googleapis.com/v0/b/dhirajhub-699.appspot.com/o/VID-20230113-WA0008.mp4?alt=media&token=04d44986-c7e9-43be-b947-124794f3b714" type="video/mp4">
 
   
 </video>
