--- a/index.html
+++ b/index.html
@@ -656,10 +656,12 @@
 
   <script src="/js/search.js" charset="utf-8"></script>
   <script src="/js/main.js" charset="utf-8"></script>
+  
   <!--infolinks-->
   <script type="text/javascript"> var infolinks_pid = 3380141; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
-<script type="text/javascript">
+    <script src="/js/jquery.js" charset="utf-8"></script>
+<script>
         var divs = $("div.video_items").get().sort(function(){
 
 return Math.round(Math.random())-0.23; 
