--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
   <!--infolinks-->
   <script type="text/javascript"> var infolinks_pid = 3380141; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
-    <script src="/js/jquery.js" charset="utf-8"></script>
+    <script src="/js/jQuery.js" charset="utf-8"></script>
 <script>
         var divs = $("div.video_items").get().sort(function(){
 
