--- a/videoweb.html/video1.html
+++ b/videoweb.html/video1.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="/css/style.css">
 
   <link rel="stylesheet" href="/css/single.css">
-
+<script src="/js/jQuery.js"></script>
  <script src="/js/shuffle.js"></script>
   <script src="/js/shuffle2.js"></script>
 
