--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
     <section class="video_content grid">
       <!--video template-->
       <div class="video_items">
-        <a href="/videoweb.html/video1.html">
+        <a href="/videoweb.html/video1">
           <img src="images/THUMBNAILS/01.jpg" alt="">
         </a>
         <div class="details flex">
