--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                  <i class="fa-brands fa-tiktok nav_icon"></i>
                  <span class="nav_name">Short Video</span>
                </a>-->
-            <a href="/html/profile.html" class="nav_link navtop">
+            <a href="/html/profile" class="nav_link navtop">
               <i class="fa-solid fa-users nav_icon"></i>
               <span class="nav_name">About</span>
             </a>
@@ -130,37 +130,37 @@
 
               <div class="nav_dropdown-collaps">
                 <ul class="nav_dropdown-content" id="myUL">
-                  <li> <a href="/categories/anal.html" class="nav_dropdown-item">Anal</a></li>
-                  <li> <a href="/categories/aunty.html" class="nav_dropdown-item">Aunty</a></li>
-                  <li> <a href="/categories/arab.html" class="nav_dropdown-item">Arab</a></li>
-                  <li> <a href="/categories/asian.html" class="nav_dropdown-item">Asian</a></li>
-                  <li> <a href="/categories/bbc.html" class="nav_dropdown-item">BBC</a></li>
-                  <li> <a href="/categories/bbw.html" class="nav_dropdown-item">BBW</a></li>
-                  <li> <a href="/categories/bhabhi.html" class="nav_dropdown-item">Bhabhi</a></li>
-                  <li> <a href="/categories/black.html" class="nav_dropdown-item">Black</a></li>
-                  <li> <a href="/categories/cumshot.html" class="nav_dropdown-item">Cumshot</a></li>
-                  <li> <a href="/categories/deepthroat.html" class="nav_dropdown-item">Deepthroat</a></li>
-                  <li> <a href="/categories/gangbang.html" class="nav_dropdown-item">Gangbang</a></li>
-                  <li> <a href="/categories/hardcore.html" class="nav_dropdown-item">Hardcore</a></li>
+                  <li> <a href="/categories/anal" class="nav_dropdown-item">Anal</a></li>
+                  <li> <a href="/categories/aunty" class="nav_dropdown-item">Aunty</a></li>
+                  <li> <a href="/categories/arab" class="nav_dropdown-item">Arab</a></li>
+                  <li> <a href="/categories/asian" class="nav_dropdown-item">Asian</a></li>
+                  <li> <a href="/categories/bbc" class="nav_dropdown-item">BBC</a></li>
+                  <li> <a href="/categories/bbw" class="nav_dropdown-item">BBW</a></li>
+                  <li> <a href="/categories/bhabhi" class="nav_dropdown-item">Bhabhi</a></li>
+                  <li> <a href="/categories/black" class="nav_dropdown-item">Black</a></li>
+                  <li> <a href="/categories/cumshot" class="nav_dropdown-item">Cumshot</a></li>
+                  <li> <a href="/categories/deepthroat" class="nav_dropdown-item">Deepthroat</a></li>
+                  <li> <a href="/categories/gangbang" class="nav_dropdown-item">Gangbang</a></li>
+                  <li> <a href="/categories/hardcore" class="nav_dropdown-item">Hardcore</a></li>
                   <li> <a href="/categories/hentai" class="nav_dropdown-item">Hentai</a></li>
                   <li> <a href="/categories/hindi" class="nav_dropdown-item">Hindi</a></li>
-                  <li> <a href="/categories/indian.html" class="nav_dropdown-item">Indian</a></li>
-                  <li> <a href="/categories/maid.html" class="nav_dropdown-item">Maid</a></li>
-                  <li> <a href="/categories/mms.html" class="nav_dropdown-item">MMS</a></li>
-                  <li> <a href="/categories/movie.html" class="nav_dropdown-item">Movie</a></li>
-                  <li> <a href="/categories/solo.html" class="nav_dropdown-item">Solo</a></li>
-                  <li> <a href="/categories/ownerschoice.html" class="nav_dropdown-item">Owner's Choice</a></li>
+                  <li> <a href="/categories/indian" class="nav_dropdown-item">Indian</a></li>
+                  <li> <a href="/categories/maid" class="nav_dropdown-item">Maid</a></li>
+                  <li> <a href="/categories/mms" class="nav_dropdown-item">MMS</a></li>
+                  <li> <a href="/categories/movie" class="nav_dropdown-item">Movie</a></li>
+                  <li> <a href="/categories/solo" class="nav_dropdown-item">Solo</a></li>
+                  <li> <a href="/categories/ownerschoice" class="nav_dropdown-item">Owner's Choice</a></li>
 
                 </ul>
               </div>
               
             </div>
   
-            <a href="html/privacypolicy.html" class="nav_link navtop">
+            <a href="html/privacypolicy" class="nav_link navtop">
               <i class="fa-solid fa-user-lock nav_icon"></i>
               <span class="nav_name">Privacy and Policy</span>
             </a>
-            <a href="html/terms.html" class="nav_link navtop">
+            <a href="html/terms" class="nav_link navtop">
               <i class="fa-solid fa-file-contract nav_icon"></i>
               <span class="nav_name">Terms and Conditions</span>
             </a>
@@ -309,7 +309,7 @@
     <section class="video_content grid">
       <!--video template-->
       <div class="video_items">
-        <a href="/videoweb.html/video1">
+        <a href="/videoweb/video1">
           <img src="images/THUMBNAILS/01.jpg" alt="">
         </a>
         <div class="details flex">
@@ -323,7 +323,7 @@
       </div>
       <!---->
       <div class="video_items">
-        <a href="/videoweb.html/video2.html">
+        <a href="/videoweb/video2">
           <img src="images/THUMBNAILS/02.jpg" alt="">
         </a>
         <div class="details flex">
@@ -336,7 +336,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video3.html">
+        <a href="/videoweb/video3">
           <img src="images/THUMBNAILS/03.jpg" alt="">
         </a>
         <div class="details flex">
@@ -349,7 +349,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video4.html">
+        <a href="/videoweb/video4">
           <img src="images/THUMBNAILS/04.jpg" alt="">
         </a>
         <div class="details flex">
@@ -362,7 +362,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video5.html">
+        <a href="/videoweb/video5">
           <img src="images/THUMBNAILS/05.jpg" alt="">
         </a>
         <div class="details flex">
@@ -375,7 +375,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video6.html">
+        <a href="/videoweb/video6">
           <img src="images/THUMBNAILS/06.jpg" alt="">
         </a>
         <div class="details flex">
@@ -388,7 +388,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video7.html">
+        <a href="/videoweb/video7">
           <img src="images/THUMBNAILS/07.jpg" alt="">
         </a>
         <div class="details flex">
@@ -404,7 +404,7 @@
 
 
       <div class="video_items">
-        <a href="/videoweb.html/video8.html">
+        <a href="/videoweb/video8">
           <img src="images/THUMBNAILS/08.jpg" alt="">
         </a>
         <div class="details flex">
@@ -418,7 +418,7 @@
       </div>
     
       <div class="video_items">
-        <a href="/videoweb.html/video9.html">
+        <a href="/videoweb/video9">
           <img src="images/THUMBNAILS/09.jpg" alt="">
         </a>
         <div class="details flex">
@@ -431,7 +431,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video10.html">
+        <a href="/videoweb/video10">
           <img src="images/THUMBNAILS/10.jpg" alt="">
         </a>
         <div class="details flex">
@@ -444,7 +444,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video11.html">
+        <a href="/videoweb/video11">
           <img src="images/THUMBNAILS/11.jpg" alt="">
         </a>
         <div class="details flex">
@@ -457,7 +457,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video12.html">
+        <a href="/videoweb/video12">
           <img src="images/THUMBNAILS/12.jpg" alt="">
         </a>
         <div class="details flex">
@@ -470,7 +470,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video13.html">
+        <a href="/videoweb/video13">
           <img src="images/THUMBNAILS/13.jpg" alt="">
         </a>
         <div class="details flex">
@@ -483,7 +483,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video14.html">
+        <a href="/videoweb/video14">
           <img src="images/THUMBNAILS/14.jpg" alt="">
         </a>
         <div class="details flex">
@@ -496,7 +496,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video15.html">
+        <a href="/videoweb/video15">
           <img src="images/THUMBNAILS/15.jpg" alt="">
         </a>
         <div class="details flex">
@@ -509,7 +509,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video16.html">
+        <a href="/videoweb/video16">
           <img src="images/THUMBNAILS/16.jpg" alt="">
         </a>
         <div class="details flex">
@@ -522,7 +522,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video17.html">
+        <a href="/videoweb/video17">
           <img src="images/THUMBNAILS/17.jpg" alt="">
         </a>
         <div class="details flex">
@@ -535,7 +535,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video18.html">
+        <a href="/videoweb/video18">
           <img src="images/THUMBNAILS/18.jpg" alt="">
         </a>
         <div class="details flex">
@@ -548,7 +548,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video19.html">
+        <a href="/videoweb/video19">
           <img src="images/THUMBNAILS/19.jpg" alt="">
         </a>
         <div class="details flex">
@@ -561,7 +561,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video20.html">
+        <a href="/videoweb/video20">
           <img src="images/THUMBNAILS/20.jpg" alt="">
         </a>
         <div class="details flex">
@@ -574,7 +574,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video21.html">
+        <a href="/videoweb/video21">
           <img src="images/THUMBNAILS/21.jpg" alt="">
         </a>
         <div class="details flex">
@@ -587,7 +587,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video22.html">
+        <a href="/videoweb/video22">
           <img src="images/THUMBNAILS/22.jpg" alt="">
         </a>
         <div class="details flex">
@@ -600,7 +600,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb.html/video23.html">
+        <a href="/videoweb/video23">
           <img src="images/THUMBNAILS/23.jpg" alt="">
         </a>
         <div class="details flex">
@@ -620,7 +620,7 @@
       <li><a href="/">
           <h3>1</h3>
         </a></li>
-      <li><a href="/pages/2.html">2</a></li>
+      <li><a href="/pages/2">2</a></li>
       <li><a href="#">3</a></li>
       <li><a href="#">4</a></li>
       <li><a href="#">5</a></li>
@@ -632,7 +632,7 @@
 
       <li class="no-page"><a href="#" class="ellipsis last-ellipsis">...</a></li>
       <!--  <li><a href="#" class="last-page">1001</a></li>-->
-      <li><a href="/pages/2.html" class="no-page next-page">
+      <li><a href="/pages/2" class="no-page next-page">
           <span class="mobile-hide">Next</span>
           <span class="mobile-show-inline icon-f icf-chevron-right"></span>
         </a>
