--- a/ind2.html
+++ b/ind2.html
@@ -317,7 +317,7 @@
           <div class="heading">
             <p>Libarary Masturbation with Cite arab pornstar Mia Khalifa</p>
             <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
-            <span>56.7M .1 Week ago</span>
+            <span>56.7M . Week ago</span>
           </div>
         </div>
       </div>
