--- a/ind2.html
+++ b/ind2.html
@@ -49,7 +49,7 @@
 
     <script src="/js/suggestions.js"></script>
     <script src="/js/script.js"></script>
-    <script src="/js/jQuery.js"></script
+    <script src="/js/jQuery.js"></script>
 
 
     <br>
