--- a/ind2.html
+++ b/ind2.html
@@ -388,7 +388,7 @@
         </div>
       </div>
       <div class="video_items">
-        <a href="/videoweb/video7">
+        <a href="/videoweb/video7.html">
           <img src="images/THUMBNAILS/07.jpg" alt="">
         </a>
         <div class="details flex">
