--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
 	<title>DHIRAJHUBS</title>
 
+	
+	
+	<meta name='asg_verification' content='Mqwq9tTYzYsUB7TqUwKyLRMG'>
+	
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
