--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 </head>
 
 <body>
+	<script async type="application/javascript" src="https://a.realsrv.com/ad-provider.js"></script>
 	<!--
 	<div class="top-links">
 		<div class="center-hold">
@@ -266,7 +267,10 @@
 
 					<div class="box">
 						<div class="list-videos">
-							<div class="adv-home"><span>Adv</span></div>
+							<div class="adv-home">
+								<!--<span>Adv</span>-->
+								<ins class="adsbyexoclick" data-zoneid="4928412"></ins>
+							</div>
 
 
 							<!--------------------------------->
@@ -1072,7 +1076,7 @@
 
 						<div class="box">
 							<div class="list-videos">
-								<div class="adv-home"><span>Adv</span></div>
+								<div class="adv-home"><ins class="adsbyexoclick" data-zoneid="4928440"></ins></div>
 								<div class="margin-fix" id="list_videos_most_recent_videos_items">
 									<div class="item  ">
 										<a href="/videoweb/video16.html" title="Legalbdsm	al_v01_2">
@@ -1721,6 +1725,7 @@
 		</div>
 	</div>
 	</div>
+	<script>(AdProvider = window.AdProvider ||[]).push({'serve':{}}); </script>
 	<script>
 		/*Check discreet mode*/
 		function onClickBox() {
