--- a/html/privacypolicy.html
+++ b/html/privacypolicy.html
@@ -134,7 +134,7 @@ h3{
         please contact us.</p>
     <h2>Children's Information</h2>
     <p>
-       <h3> THIS IS A ADULT WEBSITE. USERS BELOW 18 ARE STRICTLY NOT ALLOWED**</h3>
+       <h3>       **THIS IS A ADULT WEBSITE. USERS BELOW 18 ARE STRICTLY NOT ALLOWED**</h3>
     </p>
 
 </body>
