--- a/index.html
+++ b/index.html
@@ -50,6 +50,23 @@
 </head>
 
 <body>
+	<script>
+		let age =  prompt(age);
+		if (age <18){
+			let response = confirm("Sorry");
+			if (response == true) {
+				window.location.href = "https://www.google.com";
+	
+			} else{
+				window.location.href = "https://www.google.com";
+			}
+		} else {
+			// 18+
+		}
+		let promptBox = document.querySelector(".my-prompt");
+		promptBox.className = "my-prompt";
+	
+	</script>
 	<script async type="application/javascript" src="https://a.realsrv.com/ad-provider.js"></script>
 	<!--
 	<div class="top-links">
@@ -1644,8 +1661,8 @@
 				<div class="col">
 					<ul>
 						<li class="title alpha">Information</li>
-						<li><a id="footerMenu_terms" href="" rel="nofollow">Terms &amp; Conditions</a></li>
-						<li><a id="footerMenu_privacy" href="" rel="nofollow">Privacy Policy</a></li>
+						<li><a id="footerMenu_terms" href="./html/terms.html" rel="nofollow">Terms &amp; Conditions</a></li>
+						<li><a id="footerMenu_privacy" href="./html/privacypolicy.html" rel="nofollow">Privacy Policy</a></li>
 						<li><a id="footerMenu_dmca" href="" rel="nofollow">DMCA</a></li>
 						<li class="omega"><a id="footerMenu_btn-2257" href="" rel="nofollow">2257</a></li>
 					</ul>
