--- a/index.html
+++ b/index.html
@@ -46,28 +46,14 @@
 	</script>
 	<link href="" rel="alternate" type="application/rss+xml" />
 	<link href="" rel="canonical" />
-
+	
 </head>
 
 <body>
-	<script>
-		let age =  prompt(age);
-		if (age <18){
-			let response = confirm("Sorry");
-			if (response == true) {
-				window.location.href = "https://www.google.com";
-	
-			} else{
-				window.location.href = "https://www.google.com";
-			}
-		} else {
-			// 18+
-		}
-		let promptBox = document.querySelector(".my-prompt");
-		promptBox.className = "my-prompt";
-	
+	<script type="application/javascript" data idzone="4929012" data-ad_frequency_count="10" data-ad_frequency_period="5" data-type="mobile" data-browser_settings="1" data-ad_trigger_method="3" src="https://a.realsrv.com/fp-interstitial.js">
+
 	</script>
-	<script async type="application/javascript" src="https://a.realsrv.com/ad-provider.js"></script>
+		
 	<!--
 	<div class="top-links">
 		<div class="center-hold">
@@ -97,9 +83,10 @@
 		</div>
 	</div>
 	-->
+	
 
-
-	<div class="container">
+	<div class="container" id="container">
+		
 		<div class="header">
 			<div class="logo" id="logo">
 				<a href="/"><img src="./images/logo.jpeg" width="130" height="43" alt=""></a>
@@ -217,9 +204,11 @@
 			</div>
 
 		</div>
-
+		
+			
+		
 		<!-------------Mobile--->
-		<div class="content">
+		<div class="content" id="content">
 			<div id="welcome">
 				<a href="/">
 					<strong>Welcome</strong></a>
