--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
 </head>
 
 <body>
-
+<script>
+	 if(confirm("ARE YOU 18+ ?  THIS SITE CONTAINS ADULT CONTENT 🔞 ")) {
+		window.location.href = "https://dhirajhub.cf";
+	 } else {
+		window.location.href = "https://google.com";
+	 }
+	
+</script>
 
 	<script type="application/javascript">
 		(function() {
