--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
 <script>
 	 if(confirm("ARE YOU 18+ ?  THIS SITE CONTAINS ADULT CONTENT 🔞 ")) {
-		window.location.href = "https://dhirajhub.cf";
+		window.location.href = "https://dhirajhub.cf/";
 	 } else {
 		window.location.href = "https://google.com";
 	 }
