--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
 <body>
 <script>
 	 if(confirm("ARE YOU 18+ ?  THIS SITE CONTAINS ADULT CONTENT 🔞 ")) {
-		
+	
+alert("WELCOME TO DHIRAJHUB!!!");
+
+	
 	 } else {
 		window.location.href = "https://google.com";
 	 }
