--- a/index.html
+++ b/index.html
@@ -50,25 +50,28 @@
 </head>
 
 <body>
+
+	
+	
+
+
+	
+	
+		
+	
+	
 <script>
-	 if(confirm("ARE YOU 18+ ?  THIS SITE CONTAINS ADULT CONTENT 🔞 ")) {
-	
-alert("WELCOME TO DHIRAJHUB!!!");
-
-	
-	 } else {
-		window.location.href = "https://google.com";
-	 }
-	
-
 	// Check if alert has been shown before
 if (!localStorage.getItem('confirm')) {
   // Show the alert
-  alert('This is an alert that will only appear once!');
+  alert('ARE YOU 18+ ?  THIS SITE CONTAINS ADULT CONTENT 🔞');
   
   // Set a flag in localStorage to indicate that the alert has been shown
   localStorage.setItem('confirm', 'true');
 }
+	else {
+		window.location.href = "https://google.com";
+	 }
 
 
 	
