--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ if (!localStorage.getItem('alertshown')) {
 							<!--------------------------------->
 							<div class="margin-fix" id="list_videos_videos_watched_right_now_items">
 								<div class="item  ">
-									<a href="/videoweb/video1.html">
+									<a href="/videoweb/video1">
 
 										<div class="img">
 
@@ -1483,7 +1483,7 @@ if (!localStorage.getItem('alertshown')) {
 
 											<div class="img">
 
-												<img class="thumb " src="/images/THUMBNAILS/23.jp"
+												<img class="thumb " src="/images/THUMBNAILS/23.jpg"
 													alt="Legalbdsm	br_v01_6" width="320" height="180" />
 
 
